[package]
name = "hosp"
version = "0.1.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "Interface for managing an ODROID Smart Power device over USB."
homepage = "https://github.com/energymon/hosp-rs"
repository = "https://github.com/energymon/hosp-rs"
readme = "README.md"
keywords = ["odroid", "smart", "power", "hid", "usb"]
categories = ["hardware-support"]
license = "BSD-3-Clause"

[dependencies]
hidapi = "0.4"
